[package]
description = "Parse ssh config file synchronously."
edition = "2021"
keywords = ["ssh", "config"]
license = "MIT OR Apache-2.0"
name = "ssh_cfg"
version = "0.3.0"

[dependencies]
indexmap = "1.9.2"
[dev-dependencies]
shellexpand = "3.0"
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = "z"
panic = "abort"
strip = true
